# Seminar-MeshGraphNets

./: .gitignore  Linklist.md  pyproject.toml  remeshing.ipynb  structure.md
meshgraphnets/: alt_passing.py  constants.py  dataloader.py  load_preprocessed.py  meshgraphnets.ipynb  model.py  normalization.py  train.py  visu.py
