[tool.poetry]
name = "seminar-meshgraphnets"
version = "0.1.0"
description = ""
authors = ["bileamScheuvens <benedictbileam@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
torch-geometric = "2.3.1"
matplotlib = "^3.9.2"
tqdm = "^4.66.6"
tfrecord = "^1.14.5"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
